--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
-      - id: check-byte-order-marker
+      - id: fix-byte-order-marker
       - id: check-case-conflict
       - id: check-merge-conflict
       - id: check-symlinks
@@ -53,6 +53,13 @@ repos:
         name: cargo test
         description: unit test for the project
         entry: bash -c 'cargo nextest run --all-features'
+        language: rust
+        files: \.rs$
+        pass_filenames: false
+      - id: cargo-tarpaulin
+        name: cargo tarpaulin
+        description: code coverage for the project
+        entry: bash -c 'cargo tarpaulin --verbose --all-features --workspace'
         language: rust
         files: \.rs$
         pass_filenames: false
